test/tests/stages/14_pointers/invalid_types/invalid_static_initializer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  static
  int
  *
  identifier(x)
  =
  const int(10)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
